# LieGraph

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README_zh.md  config.yaml  langgraph.json  pyproject.toml
.github/workflows/: codex-pr-review.yml.disabled  pr-tests-and-format.yml
docs/: metrics-history.md
examples/: tool_usage_demo.py
src/: __init__.py
src/game/: __init__.py  config.py  dependencies.py  graph.py  llm_strategy.py  logger.py  metrics.py  rules.py  state.py
src/game/agent_tools/: __init__.py  speech_tools.py  vote_tools.py
src/game/agents/: __init__.py  agent_behavior.py  behavior_factory.py  interfaces.py  play_demo.py  vote_strategies.py  workflow_behaviors.py
src/game/modes/: __init__.py  registry.py
src/game/nodes/: __init__.py  helpers.py  host.py  player.py  transition.py
src/game/strategy/: __init__.py  context_builder.py  llm_schemas.py  logging_utils.py  models.py  prompt_builder.py  serialization.py  strategy_core.py
src/tools/: __init__.py  graph_viz.py  llm.py
src/tools/llm/: __init__.py  _formatting.py  inference.py  speech.py
tests/: test_agent_behaviors.py  test_game_rules.py  test_host_nodes.py  test_llm_strategy.py  test_metrics.py  test_metrics_history.py  test_player_nodes.py  test_state.py  test_workflow_behaviors.py
tests/agents/: test_speech_tools.py
tests/agents/tools/: test_identity.py  test_speech.py  test_voting.py
ui-web/frontend/: package-lock.json  package.json
ui-web/frontend/src/: App.css  App.js  LangGraphClient.js  i18n.js  index.js
(+21 files in other folders)
